# rag-bot-starter

./: .env  .env.example  .gitignore  README.md  gitattributes  gitignore  pyproject.toml  reproduce_2025-08-14.ps1  reproduce_2025-08-14.sh  requirements.txt  setup_unix.sh  setup_windows.bat
adapters/: post_slack.py
ingest/: build_index.py  fetch_repo.py  split_markdown.py
prompts/: daily_ja.txt
rag/: answer_cli.py  draft_today.py  generator.py  query_cli.py  reranker.py  retriever.py
report/: dify_lm_studio_連携_引継ぎ資料（_2025_08_16_jst）.md  rag_bot_引継ぎ資料_20250814_01_58.md  rag_bot_引継ぎ資料_20250814_19_38.md
serve/: app.py
storage/: chunks.jsonl
