[project]
name = "rag-bot-starter"
version = "0.1.0"
description = "Local RAG bot"
authors = [
    {name = "Hiromu",email = "mamo96358@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb (>=0.5.5)",
    "sentence-transformers (>=3.0.1)",
    "python-dotenv (>=1.0.1)",
    "pydantic (>=2.8.2)",
    "slack-sdk (>=3.31.0)",
    "fastapi (>=0.112.2)",
    "uvicorn (>=0.30.6)",
    "requests (>=2.32.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
